[tool.poetry]
name = "truffle-python-sdk"
version = "0.1.0"
description = ""
authors = ["Jacob Valdez <jacobfv123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
stringcase = "^1.2.0"
pydantic = "^2.10.2"
numpy = "^2.1.3"


[tool.poetry.group.rest.dependencies]
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
requests = "^2.32.3"


[tool.poetry.group.grpc.dependencies]
grpcio = "^1.68.1"
grpcio-tools = "^1.68.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
stringcase = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
